--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "api-zhirrr",
   "version": "1.1.0",
   "description": "My Rest Api Projectttttt",
-  "main": "index.js",
+  "main": "nodemon index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -28,8 +28,13 @@
     "base32": "0.0.6",
     "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.5",
+    "child_process": "^1.0.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "form-data": "^4.0.0",
+    "fs": "0.0.1-security",
+    "image-to-base64": "^2.2.0",
+    "instatouch": "^2.3.3",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "mongodb": "^3.6.3",
@@ -37,12 +42,14 @@
     "morgan": "^1.10.0",
     "needle": "^2.6.0",
     "node-fetch": "^2.6.1",
+    "nodemon": "^2.0.7",
     "request": "^2.88.2",
-    "scrape-yt": "^1.4.8",
+    "serve-favicon": "^2.5.0",
     "ssl-express-www": "^3.0.7",
     "tiktok-scraper": "^1.4.12",
     "urlencode": "^1.1.0",
-    "ytdl-core": "^4.4.5",
+    "yt-search": "^2.7.6",
+    "ytdl-core": "^4.5.0",
     "ytpl": "^2.0.5"
   },
   "homepage": "https://github.com/Zhirrr/Zhirrr-Api#readme"
