--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "cheerio": "^1.0.0-rc.5",
     "child_process": "^1.0.2",
     "cors": "^2.8.5",
+    "emoji-api": "^1.0.2",
     "express": "^4.17.1",
+    "fbdl-core": "^1.0.2",
     "form-data": "^4.0.0",
     "fs": "0.0.1-security",
-    "image-to-base64": "^2.2.0",
+    "genius-lyrics": "^4.2.7",
     "instatouch": "^2.3.3",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
@@ -50,7 +52,7 @@
     "urlencode": "^1.1.0",
     "yt-search": "^2.7.6",
     "ytdl-core": "^4.5.0",
-    "ytpl": "^2.0.5"
+    "zrapi": "0.0.6"
   },
   "homepage": "https://github.com/Zhirrr/Zhirrr-Api#readme"
 }
